refactor: last offset에 대한 정보를 dto에 위임